--- a/css/styles.css
+++ b/css/styles.css
@@ -44,20 +44,22 @@ body {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
+  text-decoration: none;
 }
 .site-nav .link:hover,
 .site-nav .link:focus {
   color: var(--accent-color);
 }
-.site-nav .link .current {
+.site-nav .link.active {
   color: var(--accent-color);
 }
 .auth-nav .link {
   color: var(--primary-text-color);
   font-weight: 500;
   font-size: 14px;
-  line-height: 16px;
+  line-height: 1.14;
   letter-spacing: 0.02em;
+  text-decoration: none;
 }
 .auth-nav .link:hover,
 .auth-nav .link:focus {
@@ -121,6 +123,7 @@ body {
 .button {
   color: var(--title-text-color);
   background-color: #f5f4fa;
+  font-family: Roboto, sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
@@ -136,6 +139,7 @@ body {
 .button-primary {
   color: var(--primary-white-color);
   background-color: var(--accent-color);
+  font-family: Roboto, sans-serif;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
@@ -149,23 +153,26 @@ body {
 .page-footer {
   background-color: #2f303a;
 }
-.link-t {
-  color: #ffffff;
+.address {
+  font-style: normal;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
+  text-decoration: none;
 }
-.link-f {
+.address .link-t {
+  color: #ffffff;
+  text-decoration: none;
+}
+.address .link-f {
   color: rgba(255, 255, 255, 0.6);
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
+  text-decoration: none;
 }
 
-.main-portfolio {
+.portfolio {
   background-color: #e5e5e5;
 }
-.filters-button {
+.filters {
 }
 .project {
 }
